ts/src/generated/ser/SerParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { SerListener } from "./SerListener.js";
import { SerVisitor } from "./SerVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class SerParser extends antlr.Parser {
    public static readonly RULE = 1;
    public static readonly TRACE = 2;
    public static readonly ENDPOINT = 3;
    public static readonly FACT = 4;
    public static readonly FIND = 5;
    public static readonly WITH = 6;
    public static readonly LET = 7;
    public static readonly FROM = 8;
    public static readonly ON = 9;
    public static readonly TAKE = 10;
    public static readonly DEFAULT = 11;
    public static readonly MAP = 12;
    public static readonly BUILD = 13;
    public static readonly EXTERNAL = 14;
    public static readonly WHEN = 15;
    public static readonly KEY = 16;
    public static readonly RESOLVE = 17;
    public static readonly ANNOTATION = 18;
    public static readonly DECORATOR = 19;
    public static readonly ARGUMENT = 20;
    public static readonly METHOD = 21;
    public static readonly CLASS = 22;
    public static readonly FIELD = 23;
    public static readonly CALL = 24;
    public static readonly PARAMETER = 25;
    public static readonly RETURN = 26;
    public static readonly ASSIGNMENT = 27;
    public static readonly NEW = 28;
    public static readonly LITERAL = 29;
    public static readonly NAME = 30;
    public static readonly VALUE = 31;
    public static readonly RAW = 32;
    public static readonly TYPE = 33;
    public static readonly OWNER = 34;
    public static readonly SIGNATURE = 35;
    public static readonly ATTR = 36;
    public static readonly CONCAT = 37;
    public static readonly NORMALIZE = 38;
    public static readonly REGEX = 39;
    public static readonly REPLACE = 40;
    public static readonly GROUP = 41;
    public static readonly PLAIN = 42;
    public static readonly PLACEHOLDER = 43;
    public static readonly EQ = 44;
    public static readonly COLON = 45;
    public static readonly COMMA = 46;
    public static readonly DOT = 47;
    public static readonly PIPE = 48;
    public static readonly AT = 49;
    public static readonly STAR = 50;
    public static readonly LBRACE = 51;
    public static readonly RBRACE = 52;
    public static readonly LBRACK = 53;
    public static readonly RBRACK = 54;
    public static readonly LPAREN = 55;
    public static readonly RPAREN = 56;
    public static readonly STRING = 57;
    public static readonly IDENT = 58;
    public static readonly INT = 59;
    public static readonly LINE_COMMENT = 60;
    public static readonly WS = 61;
    public static readonly RULE_ruleFile = 0;
    public static readonly RULE_traceFile = 1;
    public static readonly RULE_ruleDecl = 2;
    public static readonly RULE_traceDecl = 3;
    public static readonly RULE_endpointDecl = 4;
    public static readonly RULE_factDecl = 5;
    public static readonly RULE_ruleTargetDecl = 6;
    public static readonly RULE_findDecl = 7;
    public static readonly RULE_letDecl = 8;
    public static readonly RULE_sourceLine = 9;
    public static readonly RULE_sourceExpr = 10;
    public static readonly RULE_takeExpr = 11;
    public static readonly RULE_defaultLine = 12;
    public static readonly RULE_mapBlock = 13;
    public static readonly RULE_mapEntry = 14;
    public static readonly RULE_buildDecl = 15;
    public static readonly RULE_buildField = 16;
    public static readonly RULE_buildFieldName = 17;
    public static readonly RULE_traceEntry = 18;
    public static readonly RULE_whenDecl = 19;
    public static readonly RULE_traceTarget = 20;
    public static readonly RULE_buildExpr = 21;
    public static readonly RULE_concatList = 22;
    public static readonly RULE_concatItem = 23;
    public static readonly RULE_pipelineStep = 24;
    public static readonly RULE_methodPattern = 25;
    public static readonly RULE_qualifiedName = 26;
    public static readonly RULE_annotationRef = 27;
    public static readonly RULE_decoratorRef = 28;
    public static readonly RULE_elementRef = 29;
    public static readonly RULE_identList = 30;
    public static readonly RULE_findName = 31;
    public static readonly RULE_nameItem = 32;
    public static readonly RULE_literal = 33;
    public static readonly RULE_valueToken = 34;

    public static readonly literalNames = [
        null, "'rule'", "'trace'", "'endpoint'", "'fact'", "'find'", "'with'",
        "'let'", "'from'", "'on'", "'take'", "'default'", "'map'", "'build'",
        "'external'", "'when'", "'key'", "'resolve'", "'annotation'", "'decorator'",
        "'argument'", "'method'", "'class'", "'field'", "'call'", "'parameter'",
        "'return'", "'assignment'", "'new'", "'literal'", "'name'", "'value'",
        "'raw'", "'type'", "'owner'", "'signature'", "'attr'", "'concat'",
        "'normalize'", "'regex'", "'replace'", "'group'", "'plain'", "'placeholder'",
        "'='", "':'", "','", "'.'", "'|'", "'@'", "'*'", "'{'", "'}'", "'['",
        "']'", "'('", "')'"
    ];

    public static readonly symbolicNames = [
        null, "RULE", "TRACE", "ENDPOINT", "FACT", "FIND", "WITH", "LET",
        "FROM", "ON", "TAKE", "DEFAULT", "MAP", "BUILD", "EXTERNAL", "WHEN",
        "KEY", "RESOLVE", "ANNOTATION", "DECORATOR", "ARGUMENT", "METHOD",
        "CLASS", "FIELD", "CALL", "PARAMETER", "RETURN", "ASSIGNMENT", "NEW",
        "LITERAL", "NAME", "VALUE", "RAW", "TYPE", "OWNER", "SIGNATURE",
        "ATTR", "CONCAT", "NORMALIZE", "REGEX", "REPLACE", "GROUP", "PLAIN",
        "PLACEHOLDER", "EQ", "COLON", "COMMA", "DOT", "PIPE", "AT", "STAR",
        "LBRACE", "RBRACE", "LBRACK", "RBRACK", "LPAREN", "RPAREN", "STRING",
        "IDENT", "INT", "LINE_COMMENT", "WS"
    ];
    public static readonly ruleNames = [
        "ruleFile", "traceFile", "ruleDecl", "traceDecl", "endpointDecl",
        "factDecl", "ruleTargetDecl", "findDecl", "letDecl", "sourceLine",
        "sourceExpr", "takeExpr", "defaultLine", "mapBlock", "mapEntry",
        "buildDecl", "buildField", "buildFieldName", "traceEntry", "whenDecl",
        "traceTarget", "buildExpr", "concatList", "concatItem", "pipelineStep",
        "methodPattern", "qualifiedName", "annotationRef", "decoratorRef",
        "elementRef", "identList", "findName", "nameItem", "literal", "valueToken",
    ];

    public get grammarFileName(): string { return "Ser.g4"; }
    public get literalNames(): (string | null)[] { return SerParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return SerParser.symbolicNames; }
    public get ruleNames(): string[] { return SerParser.ruleNames; }
    public get serializedATN(): number[] { return SerParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, SerParser._ATN, SerParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public ruleFile(): RuleFileContext {
        let localContext = new RuleFileContext(this.context, this.state);
        this.enterRule(localContext, 0, SerParser.RULE_ruleFile);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 70;
            this.ruleDecl();
            this.state = 71;
            this.ruleTargetDecl();
            this.state = 72;
            this.findDecl();
            this.state = 76;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 15) {
                {
                {
                this.state = 73;
                this.whenDecl();
                }
                }
                this.state = 78;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 82;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 7) {
                {
                {
                this.state = 79;
                this.letDecl();
                }
                }
                this.state = 84;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 85;
            this.buildDecl();
            this.state = 86;
            this.match(SerParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public traceFile(): TraceFileContext {
        let localContext = new TraceFileContext(this.context, this.state);
        this.enterRule(localContext, 2, SerParser.RULE_traceFile);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 88;
            this.traceDecl();
            this.state = 92;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 8) {
                {
                {
                this.state = 89;
                this.traceEntry();
                }
                }
                this.state = 94;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 95;
            this.match(SerParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public ruleDecl(): RuleDeclContext {
        let localContext = new RuleDeclContext(this.context, this.state);
        this.enterRule(localContext, 4, SerParser.RULE_ruleDecl);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 97;
            this.match(SerParser.RULE);
            this.state = 98;
            this.match(SerParser.STRING);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public traceDecl(): TraceDeclContext {
        let localContext = new TraceDeclContext(this.context, this.state);
        this.enterRule(localContext, 6, SerParser.RULE_traceDecl);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 100;
            this.match(SerParser.TRACE);
            this.state = 101;
            this.match(SerParser.STRING);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public endpointDecl(): EndpointDeclContext {
        let localContext = new EndpointDeclContext(this.context, this.state);
        this.enterRule(localContext, 8, SerParser.RULE_endpointDecl);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 103;
            this.match(SerParser.ENDPOINT);
            this.state = 104;
            this.valueToken();
            this.state = 105;
            this.valueToken();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public factDecl(): FactDeclContext {
        let localContext = new FactDeclContext(this.context, this.state);
        this.enterRule(localContext, 10, SerParser.RULE_factDecl);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 107;
            this.match(SerParser.FACT);
            this.state = 108;
            this.valueToken();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public ruleTargetDecl(): RuleTargetDeclContext {
        let localContext = new RuleTargetDeclContext(this.context, this.state);
        this.enterRule(localContext, 12, SerParser.RULE_ruleTargetDecl);
        try {
            this.state = 112;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case SerParser.ENDPOINT:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 110;
                this.endpointDecl();
                }
                break;
            case SerParser.FACT:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 111;
                this.factDecl();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public findDecl(): FindDeclContext {
        let localContext = new FindDeclContext(this.context, this.state);
        this.enterRule(localContext, 14, SerParser.RULE_findDecl);
        let _la: number;
        try {
            this.state = 142;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 5, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 114;
                this.match(SerParser.FIND);
                this.state = 115;
                this.match(SerParser.METHOD);
                this.state = 116;
                this.match(SerParser.WITH);
                this.state = 117;
                this.match(SerParser.ANNOTATION);
                this.state = 118;
                this.annotationRef();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 119;
                this.match(SerParser.FIND);
                this.state = 120;
                this.match(SerParser.METHOD);
                this.state = 121;
                this.methodPattern();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 122;
                this.match(SerParser.FIND);
                this.state = 123;
                this.match(SerParser.CLASS);
                this.state = 124;
                this.match(SerParser.WITH);
                this.state = 125;
                this.match(SerParser.ANNOTATION);
                this.state = 126;
                this.annotationRef();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 127;
                this.match(SerParser.FIND);
                this.state = 128;
                this.match(SerParser.CLASS);
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 129;
                this.match(SerParser.FIND);
                this.state = 130;
                this.match(SerParser.FIELD);
                this.state = 131;
                this.match(SerParser.WITH);
                this.state = 132;
                this.match(SerParser.ANNOTATION);
                this.state = 133;
                this.annotationRef();
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 134;
                this.match(SerParser.FIND);
                this.state = 135;
                this.match(SerParser.FIELD);
                this.state = 136;
                localContext._fieldName = this.nameItem();
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 137;
                this.match(SerParser.FIND);
                this.state = 138;
                localContext._genericFindKind = this.nameItem();
                this.state = 140;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4293462016) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 69206031) !== 0)) {
                    {
                    this.state = 139;
                    localContext._genericFindName = this.findName();
                    }
                }

                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public letDecl(): LetDeclContext {
        let localContext = new LetDeclContext(this.context, this.state);
        this.enterRule(localContext, 16, SerParser.RULE_letDecl);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 144;
            this.match(SerParser.LET);
            this.state = 145;
            localContext._letName = this.nameItem();
            this.state = 146;
            this.match(SerParser.EQ);
            this.state = 148;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 147;
                this.sourceLine();
                }
                }
                this.state = 150;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 8);
            this.state = 153;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 11) {
                {
                this.state = 152;
                this.defaultLine();
                }
            }

            this.state = 156;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 12) {
                {
                this.state = 155;
                this.mapBlock();
                }
            }

            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public sourceLine(): SourceLineContext {
        let localContext = new SourceLineContext(this.context, this.state);
        this.enterRule(localContext, 18, SerParser.RULE_sourceLine);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 158;
            this.match(SerParser.FROM);
            this.state = 159;
            this.sourceExpr();
            this.state = 160;
            this.match(SerParser.TAKE);
            this.state = 161;
            this.takeExpr();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public sourceExpr(): SourceExprContext {
        let localContext = new SourceExprContext(this.context, this.state);
        this.enterRule(localContext, 20, SerParser.RULE_sourceExpr);
        let _la: number;
        try {
            this.state = 199;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 12, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 163;
                this.match(SerParser.ANNOTATION);
                this.state = 164;
                this.match(SerParser.ON);
                this.state = 165;
                this.elementRef();
                this.state = 166;
                this.annotationRef();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 168;
                this.match(SerParser.DECORATOR);
                this.state = 169;
                this.match(SerParser.ON);
                this.state = 170;
                this.elementRef();
                this.state = 171;
                this.decoratorRef();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 173;
                this.match(SerParser.ARGUMENT);
                this.state = 174;
                this.match(SerParser.LBRACK);
                this.state = 175;
                this.match(SerParser.INT);
                this.state = 176;
                this.match(SerParser.RBRACK);
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 177;
                this.match(SerParser.CALL);
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 178;
                this.match(SerParser.DECORATOR);
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 179;
                this.match(SerParser.METHOD);
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 180;
                this.match(SerParser.CLASS);
                }
                break;
            case 8:
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 181;
                this.match(SerParser.FIELD);
                this.state = 183;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4293462016) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 67108879) !== 0)) {
                    {
                    this.state = 182;
                    localContext._sourceName = this.nameItem();
                    }
                }

                }
                break;
            case 9:
                this.enterOuterAlt(localContext, 9);
                {
                this.state = 185;
                this.match(SerParser.PARAMETER);
                this.state = 187;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4293462016) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 67108879) !== 0)) {
                    {
                    this.state = 186;
                    localContext._sourceName = this.nameItem();
                    }
                }

                }
                break;
            case 10:
                this.enterOuterAlt(localContext, 10);
                {
                this.state = 189;
                this.match(SerParser.RETURN);
                }
                break;
            case 11:
                this.enterOuterAlt(localContext, 11);
                {
                this.state = 190;
                this.match(SerParser.ASSIGNMENT);
                }
                break;
            case 12:
                this.enterOuterAlt(localContext, 12);
                {
                this.state = 191;
                this.match(SerParser.NEW);
                this.state = 192;
                this.qualifiedName();
                }
                break;
            case 13:
                this.enterOuterAlt(localContext, 13);
                {
                this.state = 193;
                this.match(SerParser.LITERAL);
                this.state = 194;
                this.literal();
                }
                break;
            case 14:
                this.enterOuterAlt(localContext, 14);
                {
                this.state = 195;
                localContext._genericSourceKind = this.nameItem();
                this.state = 197;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4293462016) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 67108879) !== 0)) {
                    {
                    this.state = 196;
                    localContext._genericSourceName = this.nameItem();
                    }
                }

                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public takeExpr(): TakeExprContext {
        let localContext = new TakeExprContext(this.context, this.state);
        this.enterRule(localContext, 22, SerParser.RULE_takeExpr);
        try {
            this.state = 213;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 13, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 201;
                this.match(SerParser.NAME);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 202;
                this.match(SerParser.VALUE);
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 203;
                this.match(SerParser.RAW);
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 204;
                this.match(SerParser.TYPE);
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 205;
                this.match(SerParser.OWNER);
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 206;
                this.match(SerParser.SIGNATURE);
                }
                break;
            case 7:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 207;
                this.match(SerParser.ATTR);
                this.state = 208;
                this.match(SerParser.LPAREN);
                this.state = 209;
                this.identList();
                this.state = 210;
                this.match(SerParser.RPAREN);
                }
                break;
            case 8:
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 212;
                localContext._genericTake = this.nameItem();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public defaultLine(): DefaultLineContext {
        let localContext = new DefaultLineContext(this.context, this.state);
        this.enterRule(localContext, 24, SerParser.RULE_defaultLine);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 215;
            this.match(SerParser.DEFAULT);
            this.state = 216;
            this.literal();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public mapBlock(): MapBlockContext {
        let localContext = new MapBlockContext(this.context, this.state);
        this.enterRule(localContext, 26, SerParser.RULE_mapBlock);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 218;
            this.match(SerParser.MAP);
            this.state = 219;
            this.match(SerParser.LBRACE);
            this.state = 223;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 58) {
                {
                {
                this.state = 220;
                this.mapEntry();
                }
                }
                this.state = 225;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 226;
            this.match(SerParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public mapEntry(): MapEntryContext {
        let localContext = new MapEntryContext(this.context, this.state);
        this.enterRule(localContext, 28, SerParser.RULE_mapEntry);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 228;
            this.valueToken();
            this.state = 229;
            this.match(SerParser.COLON);
            this.state = 230;
            this.valueToken();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public buildDecl(): BuildDeclContext {
        let localContext = new BuildDeclContext(this.context, this.state);
        this.enterRule(localContext, 30, SerParser.RULE_buildDecl);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 232;
            this.match(SerParser.BUILD);
            this.state = 233;
            this.match(SerParser.LBRACE);
            this.state = 237;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4293462016) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & 67108879) !== 0)) {
                {
                {
                this.state = 234;
                this.buildField();
                }
                }
                this.state = 239;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 240;
            this.match(SerParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public buildField(): BuildFieldContext {
        let localContext = new BuildFieldContext(this.context, this.state);
        this.enterRule(localContext, 32, SerParser.RULE_buildField);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 242;
            this.buildFieldName();
            this.state = 243;
            this.match(SerParser.COLON);
            this.state = 244;
            this.buildExpr();
            this.state = 248;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 48) {
                {
                {
                this.state = 245;
                this.pipelineStep();
                }
                }
                this.state = 250;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public buildFieldName(): BuildFieldNameContext {
